--- a/Rest/biblioWebservice/src/main/resources/application.properties
+++ b/Rest/biblioWebservice/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# ===============================
+# DATABASE
+# ===============================
+
+spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=utf-8;
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/biblio
+spring.datasource.username=non-root
+spring.datasource.password=Admin%kirikou!
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+ 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
