--- a/Rest/biblioWebservice/src/main/resources/application.properties
+++ b/Rest/biblioWebservice/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 # ===============================
+# name application
+# ===============================
+spring.application.name=microservice-biblio
+
+
+# ===============================
 # DATABASE
 # ===============================
 
