refac + mise en place lombok+log

--- a/Rest/biblioWebservice/src/main/resources/application.properties
+++ b/Rest/biblioWebservice/src/main/resources/application.properties
@@ -3,7 +3,6 @@
 # ===============================
 spring.application.name=microservice-biblio
 
-
 # ===============================
 # DATABASE
 # ===============================
@@ -21,3 +20,14 @@ spring.datasource.password=Admin%kirikou!
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+# ===============================
+# LOG
+# ===============================
+logging.path=logs
+logging.file=${logging.path}/log.log
+logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger{36}.%M - %msg%n
+logging.level.com.mairie=debug
+logging.level.root=warn
+logging.level.org.hibernate=warn
+
