refrac redme.md

--- a/Rest/biblioWebservice/src/main/resources/application.properties
+++ b/Rest/biblioWebservice/src/main/resources/application.properties
@@ -4,6 +4,11 @@
 spring.application.name=microservice-biblio
 
 # ===============================
+# SERVER PORT
+# ===============================
+server.port=8080
+
+# ===============================
 # DATABASE
 # ===============================
 
