--- a/Rest/biblioWebApp/src/main/resources/application.properties
+++ b/Rest/biblioWebApp/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+# ===============================
+# SERVER PORT
+# ===============================
 server.port=8888
 
+
+# ===============================
+#FEIGN
+# ===============================
 spring.main.allow-bean-definition-overriding=true
