--- a/Rest/biblioWebApp/pom.xml
+++ b/Rest/biblioWebApp/pom.xml
@@ -5,7 +5,7 @@
 	
 	<groupId>com.mairie.biblio</groupId>
 	<artifactId>biblioWebApp</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-RELEASE</version>
 	<name>biblioWebApp</name>
 	<description>Demo project for Spring Boot</description>
   <parent>
