--- a/Rest/biblioWebservice/src/main/resources/application.properties
+++ b/Rest/biblioWebservice/src/main/resources/application.properties
@@ -15,8 +15,8 @@ server.port=8080
 spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=utf-8;
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/biblio
-spring.datasource.username=non-root
-spring.datasource.password=Admin%kirikou!
+spring.datasource.username=*************
+spring.datasource.password=*************
 
 # ===============================
 # JPA / HIBERNATE
